--- a/lib/presets/dbtools/package.json
+++ b/lib/presets/dbtools/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "//✨ dbx": "",
+    "dbx": "appril-dbx"
+  },
   "dependencies": {
     "@appril/dbx": "^0.0.0",
     "knex": "^0.0.0"
