--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "postbuild": "chmod +x pkg/index.js",
     "// ✨ publish": "",
     "prepub": "npm run build",
-    "pub": "npm pub"
+    "pub": "npm pub",
+    "postpub": "mkdir -p var/pub; npm pack --pack-destination var/pub"
   },
   "dependencies": {
     "fs-extra": "^11.1.1",
