--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
   },
   "release-it": {
     "hooks": {
-      "before:init": [ "npm run build" ],
-      "after:release": [ "mkdir -p var/pub", "npm pack --pack-destination var/pub" ]
+      "before:init": [
+        "npm run build"
+      ],
+      "after:release": [
+        "mkdir -p var/pub",
+        "npm pack --pack-destination var/pub"
+      ]
     }
   },
   "dependencies": {
@@ -36,20 +41,21 @@
   "devDependencies": {
     "@appril/core": "^0.2.7",
     "@appril/dbx": "^0.2.5",
-    "@appril/dev": "^0.2.3",
+    "@appril/dev": "^0.2.4",
     "@appril/more": "^0.2.5",
-    "@appril/scripts": "^0.2.3",
+    "@appril/scripts": "^0.2.4",
     "@types/fs-extra": "^11.0.4",
     "@types/koa__router": "^12.0.4",
     "@types/mustache": "^4.2.5",
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.11.4",
+    "@types/nopt": "^3.0.32",
     "@types/prompts": "^2.4.9",
     "@types/qs": "^6.9.11",
     "esbuild": "^0.19.11",
     "pinia": "^2.1.7",
     "release-it": "^17.0.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10",
+    "vite": "^5.0.11",
     "vue-router": "^4.2.5"
   }
 }
