--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "create": "pkg/index.js"
   },
   "scripts": {
-    "// ✨ lint": "",
+    "// ✨ linters": "",
     "lint": "biome lint ./lib",
+    "// ✨ types": "",
+    "tsc": "tsc --noEmit",
+    "// ✨ builders": "",
+    "esbuilder": "func() { e=$1; shift; esbuild lib/$e.ts --outfile=pkg/$e.js --bundle --platform=node --target=node20 --packages=external --loader:.tpl=text --sourcemap=inline $*; }; func",
     "// ✨ build": "",
-    "esbundler": "func() { e=$1; shift; esbuild $e --bundle --platform=node --target=node20 --packages=external --loader:.tpl=text $*; }; func",
     "prebuild": "rsync -av --delete --exclude '/*.ts' --exclude '/presets/*.ts' lib/ pkg",
-    "build": "set -e; npm run lint; npm run esbundler -- lib/index.ts --sourcemap=inline --outdir=pkg",
+    "build": "set -e; npm run lint; npm run tsc; npm run esbuilder index",
     "postbuild": "chmod +x pkg/index.js"
   },
-  "prettier": "@appril/prettier-config",
   "release-it": {
     "hooks": {
       "before:init": [
@@ -35,26 +37,26 @@
     "fs-extra": "^11.2.0",
     "merge": "^2.1.1",
     "mustache": "^4.2.0",
-    "npm-check-updates": "^16.14.14",
+    "npm-check-updates": "^16.14.15",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
-    "@appril/core": "^0.2.8",
-    "@appril/dbx": "^0.2.7",
-    "@appril/more": "^0.2.6",
-    "@appril/tsconfig": "^0.2.3",
+    "@appril/core": "^0.2.12",
+    "@appril/dbx": "^0.2.10",
+    "@appril/more": "^0.2.8",
+    "@appril/tsconfig": "^0.2.5",
     "@biomejs/biome": "^1.5.3",
     "@types/fs-extra": "^11.0.4",
     "@types/koa__router": "^12.0.4",
     "@types/mustache": "^4.2.5",
-    "@types/node": "^20.11.10",
+    "@types/node": "^20.11.25",
     "@types/nopt": "^3.0.32",
     "@types/prompts": "^2.4.9",
-    "@types/qs": "^6.9.11",
-    "esbuild": "^0.20.0",
+    "@types/qs": "^6.9.12",
+    "esbuild": "^0.20.1",
     "pinia": "^2.1.7",
-    "release-it": "^17.0.3",
-    "vite": "^5.0.12",
-    "vue-router": "^4.2.5"
+    "release-it": "^17.1.1",
+    "vite": "^5.1.5",
+    "vue-router": "^4.3.0"
   }
 }
